# hostdni

./: HostDNI_REST_API.postman_collection.json  README.md  REST_API_ENDPOINTS.md  index.html  package-lock.json  package.json  setup-permissions.sh  vite.config.js  webpack.config.js
components/: AllowLists.jsx  Backups.jsx  BlockLists.jsx  ConfirmationModal.jsx  DeploymentModal.jsx  Home.jsx  HostsFile.jsx  HostsFileRow.jsx  HostsFileTable.jsx  HostsFileToolbar.jsx  Logs.jsx  PasswordLockScreen.jsx  SettingsModal.jsx
public/css/: icons.css  navbar.css
src/: App.jsx  App.scss  db.js  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  auth.rs  main.rs
