[package]
name = "hostdni"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = ">=2.0.0, <3.0.0", features = [] }

[dependencies]
tauri = { version = ">=2.0.0, <3.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
actix-web = "4.4"
actix-cors = "0.6"
lazy_static = "1.4"
actix-rt = "2.9"
once_cell = "1.19"

[features]
# this feature is used for production builds or when `frontendDist` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
